Fix admin bar overlap, video click-through, save drain on in-flight, debounce 80ms

--- a/assets/scss/modules/_video.scss
+++ b/assets/scss/modules/_video.scss
@@ -1,10 +1,15 @@
 .lz-video {
-  margin: 8px 0;
   position: relative;
+  overflow: hidden;
 }
+.lz-video-16-9 { padding-bottom: 56.25%; }
+.lz-video-4-3  { padding-bottom: 75%; }
+.lz-video-1-1  { padding-bottom: 100%; }
 
 .lz-video-wrap {
-  position: relative;
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
   overflow: hidden;
   background: #000;
 }
@@ -14,19 +19,14 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 0; left: 0;
   border: none;
 }
 
-.lz-video-16-9 {
-  padding-bottom: 56.25%;
-}
-
-.lz-video-4-3 {
-  padding-bottom: 75%;
-}
-
-.lz-video-1-1 {
-  padding-bottom: 100%;
+/* In the builder preview, cover iframes so clicks reach the node overlay. */
+.lz-builder-preview .lz-video-wrap::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  z-index: 2;
 }
